--- a/team-builder/package.json
+++ b/team-builder/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^5.0.0",
-    "typicons.font": "^2.0.9"
+    "typicons.font": "^2.0.9",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
